<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEEEE"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/desc"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:lines="3"
        android:gravity="right|bottom"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:rowCount="5">
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="@dimen/button_height"
            android:gravity="center"
            android:text="@string/cancel"
            android:textSize="@dimen/button_font_size"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/btn_divide"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="@dimen/button_height"
            android:gravity="center"
            android:text="@string/divide"
            android:textSize="@dimen/button_font_size"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/btn_multiply"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="@dimen/button_height"
            android:gravity="center"
            android:text="@string/multiply"
            android:textSize="@dimen/button_font_size"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/btn_clean"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="@dimen/button_height"
            android:gravity="center"
            android:text="@string/clean"
            android:textSize="@dimen/button_font_size"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/btn_seven"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="@dimen/button_height"
            android:gravity="center"
            android:text="@string/seven"
            android:textSize="@dimen/button_font_size"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/btn_eight"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="@dimen/button_height"
            android:gravity="center"
            android:text="@string/eight"
            android:textSize="@dimen/button_font_size"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/btn_nine"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="@dimen/button_height"
            android:gravity="center"
            android:text="@string/nine"
            android:textSize="@dimen/button_font_size"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/btn_plus"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="@dimen/button_height"
            android:gravity="center"
            android:text="@string/plus"
            android:textSize="@dimen/button_font_size"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/btn_four"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="@dimen/button_height"
            android:gravity="center"
            android:text="@string/four"
            android:textSize="@dimen/button_font_size"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/btn_five"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="@dimen/button_height"
            android:gravity="center"
            android:text="@string/five"
            android:textSize="@dimen/button_font_size"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/btn_six"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="@dimen/button_height"
            android:gravity="center"
            android:text="@string/six"
            android:textSize="@dimen/button_font_size"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/btn_minus"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="@dimen/button_height"
            android:gravity="center"
            android:text="@string/minus"
            android:textSize="@dimen/button_font_size"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/btn_one"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="@dimen/button_height"
            android:gravity="center"
            android:text="@string/one"
            android:textSize="@dimen/button_font_size"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/btn_two"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="@dimen/button_height"
            android:gravity="center"
            android:text="@string/two"
            android:textSize="@dimen/button_font_size"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/btn_three"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="@dimen/button_height"
            android:gravity="center"
            android:text="@string/three"
            android:textSize="@dimen/button_font_size"
            android:textColor="@color/black"/>
        <ImageButton
            android:id="@+id/ib_sqrt"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="@dimen/button_height"
            android:scaleType="fitCenter"
            android:src="@drawable/sqrt"/>
        <Button
            android:id="@+id/btn_reciprocal"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="@dimen/button_height"
            android:gravity="center"
            android:text="@string/reciprocal"
            android:textSize="@dimen/button_font_size"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/btn_zero"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="@dimen/button_height"
            android:gravity="center"
            android:text="@string/zero"
            android:textSize="@dimen/button_font_size"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/btn_dot"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="@dimen/button_height"
            android:gravity="center"
            android:text="@string/dot"
            android:textSize="@dimen/button_font_size"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/btn_equal"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="@dimen/button_height"
            android:gravity="center"
            android:text="@string/equal"
            android:textSize="@dimen/button_font_size"
            android:textColor="@color/black"/>

    </GridLayout>
</LinearLayout>